<resources>

    <!-- App Information -->
    <string name="app_name">Pineapple</string>
    <string name="app_full_name">Pineapple Expenses</string>
    <string name="facebook_app_id">630683277125908</string>

    <!-- Generic -->
    <string name="generic_confirm">Yes</string>
    <string name="generic_no">No</string>

    <!-- Onboarding -->
    <string name="onboarding_register">Sign up</string>
    <string name="onboardong_login">I\'m already in</string>
    <string name="onboarding_first_title">Control</string>
    <string name="onboarding_first_text">All your expenses on the palm of your hand.</string>
    <string name="onboarding_second_title">Planning</string>
    <string name="onboarding_second_text">Need to know if you can crash that party on the weekend? We can answer that.</string>
    <string name="onboarding_third_title">Fast access</string>
    <string name="onboarding_third_text">See your financial status in the blink of an eye.</string>

    <!-- Login -->
    <string name="fb_login_protocol_scheme">fb630683277125908</string>
    <string name="facebook_button_text">or login with Facebook</string>
    <string name="login_label">Email</string>
    <string name="login_placeholder">your@email.com</string>
    <string name="password_label">Password</string>
    <string name="password_placeholder">••••••••</string>
    <string name="action_sign_in">Get me in!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login">Login</string>
    <string name="login_no_account_text">Don\'t have an account?</string>
    <string name="login_register_button">Sign up here.</string>
    <string name="login_forgot_password">Forgot your password?</string>

    <!-- Navigation Drawer -->
    <string name="nav_transactions">Transactions</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_rate_us">Rate us</string>
    <string name="nav_stats">My stats</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="logout_confirmation">Are you sure you want to leave?</string>
    <string name="logout_leave">Leave</string>
    <string name="logout_stay">Stay</string>

    <!-- MainActivity -->
    <string name="transaction_icon_description">Transaction Icon</string>

    <!-- Create Transaction Activity -->
    <string name="create_transaction_create">New transaction</string>
    <string name="create_transaction_description">Description</string>
    <string name="create_transaction_amount">Value</string>
    <string name="create_transaction_date">Date</string>
    <string name="create_transaction_type">Transaction yype</string>
    <string name="create_transaction_save">Save</string>
    <string name="create_transaction_expense">Expense</string>
    <string name="create_transaction_earning">Earning</string>

</resources>
