<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_transactions" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_equalizer_black_24dp"
            android:title="@string/nav_stats" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/nav_rate_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_logout" />
    </group>

    <item android:title="MORE">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>