<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context="pineapplesoftware.pineappleapp.account.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <!-- Pineapple logo -->
        <ImageView
            android:id="@+id/loginLogoImageView"
            android:layout_width="@dimen/image_large_size"
            android:layout_height="@dimen/image_large_size"
            android:layout_marginTop="@dimen/default_medium_margin"
            android:layout_marginBottom="@dimen/default_small_margin"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/ic_launcher" />

        <!-- Pineapple name -->
        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_medium_margin"
            android:fontFamily="@font/roboto_light"
            android:text="@string/app_full_name"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/loginLogoImageView"
            android:textSize="@dimen/font_size_large" />

        <LinearLayout
            android:id="@+id/emailLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_medium_margin"
            android:layout_marginLeft="@dimen/default_large_margin"
            android:layout_marginRight="@dimen/default_large_margin"
            android:layout_below="@id/appNameTextView"
            android:orientation="vertical">

            <!-- Login label -->
            <TextView
                android:id="@+id/loginLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/login_label"
                android:textAllCaps="true"
                android:paddingStart="@dimen/default_extra_small_margin"
                android:paddingEnd="@dimen/default_extra_small_margin"
                android:textSize="@dimen/font_size_small"
                android:textColor="@android:color/white" />

            <!-- Login EditText -->
            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/login_placeholder"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryExtraLight"
                android:textSize="@dimen/font_size_medium_large"
                android:theme="@style/EditTextLightStyle" />

            <!-- Password Label -->
            <TextView
                android:id="@+id/passwordLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_medium_margin"
                android:fontFamily="@font/roboto_light"
                android:text="@string/password_label"
                android:textAllCaps="true"
                android:paddingStart="@dimen/default_extra_small_margin"
                android:paddingEnd="@dimen/default_extra_small_margin"
                android:textSize="@dimen/font_size_small"
                android:textColor="@android:color/white" />

            <!-- Password EditText -->
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/password_placeholder"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryExtraLight"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/font_size_medium_large"
                android:theme="@style/EditTextLightStyle" />

            <!-- Forgot password Button -->
            <Button
                android:id="@+id/loginForgotPasswordButton"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_small_margin"
                android:layout_gravity="end|center_vertical"
                android:fontFamily="@font/roboto_light"
                android:gravity="end|center_vertical"
                android:textAlignment="textEnd"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/login_forgot_password"
                android:textAllCaps="false"
                android:textSize="@dimen/font_size_medium_large"
                android:textColor="@color/colorPrimaryExtraLight" />

            <!-- Login Button -->
            <Button
                android:id="@+id/emailSignInButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_large"
                android:layout_marginTop="@dimen/default_medium_margin"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/roboto_light"
                android:text="@string/action_sign_in"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_small"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_small_margin"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:id="@+id/facebookLoginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_small"
                    android:text="@string/facebook_button_text"
                    android:paddingStart="@dimen/default_medium_margin"
                    android:paddingEnd="@dimen/default_medium_margin"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:foreground="?attr/selectableItemBackground"
                    android:textSize="@dimen/font_size_medium_large"
                    android:layout_centerHorizontal="true"
                    android:drawableStart="@drawable/ic_facebook"/>

                <LinearLayout
                    android:id="@+id/noAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_extra_small"
                    android:layout_below="@+id/facebookLoginButton"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:foreground="?attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="@string/login_no_account_text"
                        android:textColor="@color/colorPrimaryExtraLight"
                        android:textSize="@dimen/font_size_medium_large" />

                    <TextView
                        android:id="@+id/loginRegisterButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingStart="@dimen/default_extra_small_margin"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="@string/login_register_button"
                        android:textAllCaps="false"
                        android:textSize="@dimen/font_size_medium_large"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
