<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pineapplesoftware.pineappleapp.main.CreateTransactionActivity"
    android:theme="@style/NoActionBarTheme">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarStyle"
        android:elevation="4dp">

        <include
            android:id="@+id/mainToolbarLayout"
            layout="@layout/toolbar_main" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mainToolbar">

        <ImageView
            android:id="@+id/transactionIcon"
            android:layout_margin="@dimen/default_large_margin"
            android:layout_width="@dimen/image_large_size"
            android:layout_height="@dimen/image_large_size"
            android:src="@mipmap/ic_launcher"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/transactionDescriptionTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_large_margin"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_toEndOf="@+id/transactionIcon">

            <EditText
                android:id="@+id/transactionDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_transaction_description"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/transactionAmountTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_large_margin"
            android:layout_marginTop="@dimen/default_small_margin"
            android:layout_below="@+id/transactionDescriptionTextInputLayout"
            android:layout_toEndOf="@+id/transactionIcon">

            <EditText
                android:id="@+id/transactionAmountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_transaction_amount"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/transactionDateTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_large_margin"
            android:layout_marginTop="@dimen/default_small_margin"
            android:layout_below="@+id/transactionAmountTextInputLayout"
            android:layout_toEndOf="@+id/transactionIcon">

            <EditText
                android:id="@+id/transactionDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_transaction_date"
                android:inputType="date"/>

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_below="@+id/transactionIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_large_margin">

            <RadioButton
                android:id="@+id/transactionTypeExpenseRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_transaction_expense"/>

            <RadioButton
                android:id="@+id/transactionTypeEarningRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_transaction_earning"/>

        </RadioGroup>

        <Button
            android:id="@+id/createTransactionButtonSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_default"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/create_transaction_save"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:foreground="?attr/selectableItemBackground"/>

    </RelativeLayout>

</RelativeLayout>
